# Restful-Booker-Api-Automation-Python

./: README.md  pyproject.toml  report.html
allure-results/: 005910a4-0325-491b-ad77-b23a36410add-result.json  199dea01-af0d-4d96-85fb-7f1b8cbcc2d8-attachment.txt  2c2ac37e-42cf-4b41-bba9-d978ae67edc4-attachment.txt  31d27264-aea5-495c-b4c0-300e5f52ac2b-container.json  33ec2878-1d38-4400-99e5-0b8982b7e0dd-attachment.txt  3c400bd2-f7f7-4fc7-8f5e-76a897aa4b2e-container.json  44108d31-02b0-4fa4-a3c2-29393c6aa0a1-result.json  458b6695-48bc-4cfc-9d88-f9cd10d683fd-result.json  4f41c084-ce9b-408f-aef7-809b0ef4d473-container.json  5ff68c01-f558-4c43-98bf-714e2938cb74-result.json  6904b9d1-3d19-48bd-a4b4-32e2c0f36a48-result.json  6cbbb857-fd37-4824-8947-37235656501f-attachment.txt  81908719-7f73-49bf-9e3f-ca794941aacf-result.json  832d1921-64c6-4636-b87a-765117c20c10-result.json  8bc4cfa6-faba-4885-8293-017ed4e0b208-container.json  9982f38a-147d-48b1-94c9-7409d0c52dbd-container.json  a328c63e-1196-458d-b680-3a730ffdd37b-container.json  a667d47f-900c-46ec-b451-9fe9aeb8aea4-attachment.txt  acc9a9e9-6e6f-4e79-a1c7-ac9a32313edc-attachment.txt  ad506a17-11e4-427d-8d7b-38c2101b7af3-attachment.txt  bd304476-4889-4d4e-b3cb-28484e43d7b1-attachment.txt  c605c55e-2289-42f0-83ed-9817dcb96888-result.json  d1807610-5a6c-4664-b137-cec971c7ce10-attachment.txt  d437759f-ee41-4c0e-b469-61436ac5b713-container.json  de3eb8b5-403e-48d3-ac0d-13bf0c4d3b95-result.json  deab9076-5001-489b-82f0-97c38305af2b-container.json  f507985d-87ca-4f39-bb69-2a3d06423452-container.json  (+1 more)
tests/: conftest.py  (+7 more)
(+1 files in other folders)
